<resources>
    <string name="app_name">CoursesCounter</string>
    <string name="name_course_list">Nome</string>
    <string name="current_lesson_list">Aula atual</string>
    <string name="progress_list">"Progresso: "</string>
    <string name="delete_course_list">Apagar</string>
    <string name="edit_course_list">Editar</string>
    <string name="info_course_list">Info</string>
    <string name="access_course_list">Estudar</string>
    <string name="actionbar_addnewcourse_title">Novo Curso</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cadastrar_button">Cadastrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num_lessons">Quantidade de aulas</string>
    <string name="num_hours">Quantidade de horas</string>
    <string name="num_current_lesson">Nº da última aula assistida</string>
    <string name="link_course">Link de acesso ao curso</string>
</resources>
