<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/list_background_blue"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".controller.AdapterCourseListController">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            app:srcCompat="@drawable/learning" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:text="@string/name_course_list"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="3.5"
                    android:text="@string/current_lesson_list"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:text="c_nm"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvCurrentLesson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="3.5"
                    android:text="c_l "
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/progress_list"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_delete"
            android:onClick="deleteCourseClick"
            android:textSize="12sp"
            tools:text=" " />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_edit"
            android:onClick="editCourseClick"
            android:textSize="12sp"
            tools:text=" " />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_info_details"
            android:onClick="infoCourseClick"
            android:textSize="12sp"
            tools:text=" " />

        <Button
            android:id="@+id/btnIncrementLesson"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@android:drawable/ic_menu_add"
            android:onClick="incrementLessonClick"
            android:textSize="12sp"
            tools:text=" " />
    </LinearLayout>

</LinearLayout>